--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -172,7 +172,7 @@ steps:
 
   - trailing_whitespace: {}
 
-columns: 120
+columns: 80
 
 newline: native
 
@@ -189,6 +189,7 @@ language_extensions:
   - GADTs
   - GeneralizedNewtypeDeriving
   - InstanceSigs
+  - LambdaCase
   - MonadFailDesugaring
   - MultiParamTypeClasses
   - MultiWayIf
@@ -206,4 +207,5 @@ language_extensions:
   - TypeFamilies
   - TypeOperators
   - TypeSynonymInstances
+  - TupleSections
   - ViewPatterns
