--- a/package.yaml
+++ b/package.yaml
@@ -72,6 +72,7 @@ library:
     - unordered-containers
     - wai
     - wai-extra
+    - wai-middleware-static
     - writer-cps-mtl
 
 executables:
