CI: Google Cloud Build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             - run: stack install hlint stylish-haskell
             - run:
                 name: Formatting
-                command: ./.circleci/check-fmt.sh
+                command: ./scripts/check-fmt.sh
             - run:
                 name: Lint
                 command: git ls-files | grep '\.l\?hs$' | xargs stack exec -- hlint "$@"
