--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
     - '-c'
     - |
       cache="stack-$$(cat stack.yaml package.yaml | sha256sum | cut -d ' ' -f 1)".tar.gz
-      if gsutil -m cp "gs://oscoin-ci/$$cache" $$cache; then
+      if gsutil -m cp "gs://oscoin-build-cache/$$cache" $$cache; then
         tar xzf $$cache
       fi
 
@@ -43,7 +43,7 @@ steps:
     - '-c'
     - |
       cache="stack-$$(cat stack.yaml package.yaml | sha256sum | cut -d ' ' -f 1)".tar.gz
-      gsutil ls "gs://oscoin-ci/$$cache" && echo "Cache is up to date" && exit 0
+      gsutil ls "gs://oscoin-build-cache/$$cache" && echo "Cache is up to date" && exit 0
       rm -rf .stack/indices/Hackage/00-index.tar*
       tar czf $$cache .stack .stack-work
-      gsutil -m cp $$cache "gs://oscoin-ci/$$cache" || true
+      gsutil -m cp $$cache "gs://oscoin-build-cache/$$cache" || true
