CLI: Implement transaction polling (#216)
CLI: Implement transaction polling

--- a/package.yaml
+++ b/package.yaml
@@ -10,6 +10,7 @@ github: oscoin/oscoin
 dependencies:
   - base >=4.11.1.0 && <4.12
   - aeson
+  - ansi-terminal
   - async
   - base16-bytestring
   - base64-bytestring
