--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -179,6 +179,7 @@ newline: native
 language_extensions:
   - BangPatterns
   - ConstraintKinds
+  - DefaultSignatures
   - DeriveFoldable
   - DeriveFunctor
   - DeriveGeneric
