--- a/stack.yaml
+++ b/stack.yaml
@@ -5,13 +5,14 @@ packages:
 
 extra-deps:
 - algebraic-graphs-0.1.1.1
+- base58-bytestring-0.1.0
 - cborg-0.2.0.0
+- half-0.2.2.3
 - merkle-tree-0.1.0
 - reroute-0.5.0.0
+- serialise-0.2.0.0
 - Spock-0.13.0.0
 - Spock-core-0.13.0.0
-- serialise-0.2.0.0
-- half-0.2.2.3
 
 - git: http://git.oscoin.io/radicle
   commit: 12707c83663909d303e4daf1806f22a779be7598
