--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,17 +18,24 @@ steps:
     - |
       stack config set system-ghc --global true
       stack config set install-ghc --global false
-      stack install stylish-haskell hlint
+      stack install stylish-haskell hlint weeder
 
   - id: "Format"
     name: 'haskell:8.4.3'
     env: ['STACK_ROOT=/workspace/.stack']
     args: ['./scripts/check-fmt.sh']
 
-  - id: "Lint"
+  - id: "Lint (hlint)"
     name: 'haskell:8.4.3'
+    waitFor: 'Format'
     env: ['STACK_ROOT=/workspace/.stack']
     args: ['stack', 'exec', '--', 'hlint', '.']
+
+  - id: "Lint (weeder)"
+    name: 'haskell:8.4.3'
+    waitFor: 'Format'
+    env: ['STACK_ROOT=/workspace/.stack']
+    args: ['stack', 'exec', '--', 'weeder', '.']
 
   - id: "Test & Build"
     name: 'haskell:8.4.3'
