--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,12 +19,17 @@ steps:
       stack config set system-ghc --global true
       stack config set install-ghc --global false
       stack install stylish-haskell hlint weeder
-      curl -L -o /usr/bin/shfmt https://github.com/mvdan/sh/releases/download/v2.5.1/shfmt_v2.5.1_linux_amd64
 
-  - id: "Format"
+  - id: "Format (shell scripts)"
+    waitFor: ['-']
+    name: gcr.io/cloud-builders/curl
+    entrypoint: "bash"
+    args: ['./scripts/check-shell-format.sh']
+
+  - id: "Format (haskell)"
     name: 'haskell:8.4.3'
     env: ['STACK_ROOT=/workspace/.stack']
-    args: ['./scripts/check-fmt.sh']
+    args: ['./scripts/check-haskell-format.sh']
 
   - id: "Lint (hlint)"
     name: 'haskell:8.4.3'
