--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,17 @@
 timeout: 1800s # Cache misses are slow to rebuild
 steps:
+  - id: "Format (shell scripts)"
+    waitFor: ['-']
+    name: gcr.io/cloud-builders/curl
+    entrypoint: "bash"
+    args: ['./scripts/check-shell-format.sh']
+
+  - id: "Lint (shellcheck)"
+    waitFor: ['-']
+    name: gcr.io/cloud-builders/docker
+    entrypoint: "bash"
+    args: ["./scripts/shellcheck.sh"]
+
   - id: "Load cache"
     name: gcr.io/cloud-builders/gsutil
     entrypoint: 'bash'
@@ -18,19 +30,7 @@ steps:
     - |
       stack config set system-ghc --global true
       stack config set install-ghc --global false
-      stack install stylish-haskell hlint weeder ShellCheck
-
-  - id: "Format (shell scripts)"
-    waitFor: ['-']
-    name: gcr.io/cloud-builders/curl
-    entrypoint: "bash"
-    args: ['./scripts/check-shell-format.sh']
-
-  - id: "Lint (shellcheck)"
-    waitFor: ['Build deps']
-    name: 'haskell:8.4.3'
-    env: ['STACK_ROOT=/workspace/.stack']
-    args: ['stack', 'exec', '--', 'shellcheck', '**/**.sh']
+      stack install stylish-haskell hlint weeder
 
   - id: "Format (haskell)"
     waitFor: ['Build deps']
