CI: Install tools outside the project directory (#285)
This will cause stack to use the "global project", which by default uses
the latest lts. The motivation is to not have any version bounds
kerfuffle interfere with the build plan for neither the tools nor the
project.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,6 +25,7 @@ steps:
     name: "haskell:8.4.3"
     env: ["STACK_ROOT=/workspace/.stack"]
     entrypoint: "bash"
+    dir: "/tmp"
     args:
     - "-c"
     - |
