CI: Always publish Haddocks
A fast-forward merge will not trigger a new build, which may mean that
the Haddocks for HEAD are not published. We now always publish the docs,
and don't include the branch name (only the SHA1) in the storage path.

This reverts commit bcd676f818b3d1de0a7608e4d5798a34c6765ce4.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -94,15 +94,12 @@ steps:
     entrypoint: "bash"
     env:
     - COMMIT_SHA=$COMMIT_SHA
-    - BRANCH_NAME=$BRANCH_NAME
     args:
     - "-c"
     - |
       set -euo pipefail
 
-      if [ "$BRANCH_NAME" == "master" ]; then
-          gsutil -m cp -r api-docs gs://oscoin-apidocs/${BRANCH_NAME}-${COMMIT_SHA}
-      fi
+      gsutil -m cp -r api-docs gs://oscoin-apidocs/${COMMIT_SHA}
 
   - id: "Save cache"
     name: gcr.io/cloud-builders/gsutil
