--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -99,7 +99,7 @@ steps:
     - |
       set -euo pipefail
 
-      gsutil -m rsync -d -r api-docs gs://oscoin-apidocs/${COMMIT_SHA}
+      gsutil -m copy -r -z html,css,js api-docs gs://oscoin-apidocs/${COMMIT_SHA}
 
   - id: "Save cache"
     name: gcr.io/cloud-builders/gsutil
