--- a/package.yaml
+++ b/package.yaml
@@ -32,7 +32,7 @@ library:
     - base64-bytestring
     - binary
     - bytestring
-    - cacophony
+    - cacophony >= 0.10.1
     - cborg
     - clock
     - conduit
