Blockstore persistence, Part 2. (#317)
Update MonadBlockStore and complete SQLite backend

This changeset makes some improvements and additions to MonadBlockStore,
as well as completing the implemention of the SQLite block storage
backend.

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -31,6 +31,7 @@
 - ignore: {name: Use map, within: [Crypto.Data.Auth.Tree.Proof]}
 - ignore: {name: Collapse lambdas}
 
+- ignore: {name: Reduce duplication}
 - ignore: {name: Use concatMap}
 - ignore: {name: Use ++}
 - ignore: {name: Use &&}
