--- a/package.yaml
+++ b/package.yaml
@@ -11,6 +11,7 @@ dependencies:
   - base >=4.11.1.0 && <4.12
 
 data-files:
+  - data/blockstore.sql
   - data/rad/prelude.rad
   - data/genesis.yaml
 
