Introduce the ProtocolConfig data structure
This commit introduces the ProtocolConfig data structure and moves the
'maxBlockSize' in a separate config file which is read upon startup.

--- a/package.yaml
+++ b/package.yaml
@@ -12,6 +12,7 @@ dependencies:
 
 data-files:
   - data/blockstore.sql
+  - data/config.yaml
   - data/rad/prelude.rad
   - data/genesis.yaml
 
@@ -76,6 +77,7 @@ library:
     - text
     - transformers
     - typed-process
+    - unordered-containers
     - wai
     - wai-extra
     - wai-middleware-static
