Ensure that the oscoin executable always starts.
This commit introduces new integration tests machinery to ensure that
the oscoin executable is runneable. It also regenerates genesis.

--- a/package.yaml
+++ b/package.yaml
@@ -152,6 +152,7 @@ tests:
       - optparse-applicative
       - oscoin
       - quickcheck-instances
+      - process
       - radicle
       - random
       - random-shuffle
