Make a start on the Metrics module.
This commit exposes new opaque types to sample telemetry metrics.
Currenly we support:

- Monotonic counters (using EKG types under the hood)
- Gauges (using EKG types under the hood)
- Histograms (currently implemented via STM TVars)

--- a/package.yaml
+++ b/package.yaml
@@ -46,6 +46,8 @@ library:
     - directory
     - direct-sqlite
     - dlist
+    - ekg
+    - ekg-core
     - fast-logger
     - filepath
     - focus
