Add the Telemetry middleware
This commit adds support for a Telemetry Middleware, which can be hooked
directly into any WAI-compliant application to expose a '/metrics'
endpoint where metrics can be exposed and consumed by third party apps
like Prometheus.

It also adds basic support for labeling those metrics.

--- a/package.yaml
+++ b/package.yaml
@@ -216,3 +216,4 @@ ghc-options:
   - -Wredundant-constraints
   - -fno-print-expanded-synonyms
   - -funbox-small-strict-fields
+  - -with-rtsopts=-T
