Improve the API and add system metrics
This commit improves the API around Counters and Gauges, allowing
"setters" to be overwritten so that we can register RTS metrics at
startup and we can keep them up-to-date on-demand without the need of an
async worker.

--- a/package.yaml
+++ b/package.yaml
@@ -99,6 +99,8 @@ executables:
       - oscoin
       - semigroups
       - yaml
+    ghc-options:
+      - -with-rtsopts=-T
 
   oscoin-cli:
     main: exe/cli/Main.hs
@@ -216,4 +218,3 @@ ghc-options:
   - -Wredundant-constraints
   - -fno-print-expanded-synonyms
   - -funbox-small-strict-fields
-  - -with-rtsopts=-T
