--- a/stack.yaml
+++ b/stack.yaml
@@ -15,6 +15,7 @@ extra-deps:
 - Spock-core-0.13.0.0
 - formatting-6.3.7 # Handy to have a Buildable [a] instance
 - pretty-terminal-0.1.0.0
+- tasty-fail-fast-0.0.3
 
 - git: http://git.oscoin.io/radicle
   commit: 12707c83663909d303e4daf1806f22a779be7598
