Get rid of the MonadBlockStore typeclass.
This commit removes the 'MonadBlockStore' typeclass altogether, both in
library code and it the tests.

--- a/.weeder.yaml
+++ b/.weeder.yaml
@@ -13,6 +13,12 @@
           - testableTick
           # END false positives
       - module:
+        - name: Oscoin.Test.Consensus.Node
+        - identifier:
+          # BEGIN false positives
+          - liftTestNodeT
+          # END false positives
+      - module:
         - name: Oscoin.Test.P2P.IO
         - identifier:
           # BEGIN debug functions
