--- a/stack.yaml
+++ b/stack.yaml
@@ -17,12 +17,13 @@ extra-deps:
 - pretty-terminal-0.1.0.0
 - tasty-fail-fast-0.0.3
 - QuickCheck-2.12.6.1
+- xxhash-ffi-0.2.0.0
 
 - git: http://git.oscoin.io/radicle
   commit: 12707c83663909d303e4daf1806f22a779be7598
 
 - git: https://github.com/oscoin/avl-auth
-  commit: 2508d2c44b87354f6c1e4fda619b43f2f0705c77
+  commit: c28e58e5de980697add9905845c82c844f2928b0
 
 - git: https://github.com/oscoin/gossip
   commit: e27ae8dac76ded78d3b20a9c7d1cf80a23a88e0c
